# hexum

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml
.config/: nextest.toml
.github/workflows/: deploy.yml
api/: Cargo.toml
api/src/: db.rs  docs.rs  init.rs  lib.rs  main.rs
business/: Cargo.toml
business/postgres/: queries.yaml
business/postgres/migrations/: 01_b_schemas.sql  02_recipes.sql  03_recipes_views.sql  04_groups.sql
business/src/: init.rs  lib.rs  prelude.rs
business/src/api/: docs.rs  error.rs  mod.rs
business/src/api/routes/: dtos.rs  health.rs  mod.rs
business/src/api/routes/groups/: add_recipe.rs  create.rs  delete.rs  dtos.rs  get_group.rs  get_groups.rs  get_recipes.rs  list_groups.rs  mod.rs  remove_recipe.rs
business/src/api/routes/recipes/: create.rs  created.rs  delete.rs  dtos.rs  explore.rs  get_by_id.rs  history.rs  mod.rs  search.rs  sync.rs
business/src/api/routes/tags/: autocomplete.rs  dtos.rs  mod.rs
business/src/core/: mod.rs  postgres.rs  state.rs
business/src/features/: mod.rs
business/src/features/base/: input.rs  mod.rs  output.rs  postgres.rs  service.rs
business/src/features/data_ingestion/: domain.rs  input.rs  output.rs  service.rs
business/src/features/data_ingestion/adapters/: mealdb.rs  mod.rs  postgres.rs
business/src/features/group/: domain.rs  input.rs  output.rs  service.rs
business/src/features/group/adapters/: mod.rs  postgres.rs
business/src/features/recipe/: domain.rs  input.rs  mod.rs  output.rs  service.rs
business/src/features/recipe/adapters/: mealdb.rs  mod.rs  postgres.rs  redis.rs
config/development/: base.toml.example
config/production/: base.toml.example
config/testing/: base.toml
ops/traefik/: docker-compose.yml
platform/: Cargo.toml
platform/postgres/: queries.yaml
platform/postgres/migrations/: 00_p_schemas.sql  00_users.sql  01_users.sql
platform/src/: init.rs  lib.rs  prelude.rs
platform/src/api/: docs.rs  error.rs  extractors.rs  mod.rs
platform/src/api/routes/: dtos.rs  mod.rs  user.rs
platform/src/api/routes/auth/: dtos.rs  local.rs  logout.rs  mod.rs  oauth.rs  refresh.rs
platform/src/api/routes/user/: change_email.rs  data.rs  delete.rs  dtos.rs  mod.rs  register.rs
platform/src/core/: config.rs  mod.rs  postgres.rs  state.rs  telemetry.rs
platform/src/features/: mod.rs
platform/src/features/auth/: input.rs  mod.rs  service.rs
platform/src/features/email/: lettre.rs  output.rs  resend.rs
platform/src/features/oauth/: oauth.rs  output.rs
platform/src/features/ratelimit/: input.rs  mod.rs  output.rs  redis.rs  service.rs
platform/src/features/security/: output.rs  paseto.rs
platform/src/features/session/: output.rs  redis.rs
platform/src/features/user/: domain.rs  input.rs  mod.rs  output.rs  postgres.rs  service.rs
platform/src/features/verification/: output.rs  redis.rs
platform/src/tests/: auth.rs  mod.rs  user.rs
platform/templates/: oauth_callback.html  oauth_login.html  verification_email.html  verify.html
src/: config.rs  main.rs  prelude.rs
src/api/: extractors.rs
src/api/routes/: dtos.rs  user.rs
src/api/routes/auth/: local.rs  logout.rs  mod.rs
src/core/: app.rs  config.rs  mod.rs  postgres.rs  telemetry.rs
src/features/: mod.rs
src/features/auth/: input.rs  service.rs
src/features/email/: mod.rs  resend.rs
src/features/oauth/: mod.rs  oauth.rs
src/features/security/: mod.rs  output.rs
src/features/session/: mod.rs  output.rs  redis.rs
src/features/verification/: redis.rs
src/infrastructure/postgres/: adapter.rs
tests/: Cargo.toml
tests/postgres/: queries.yaml
tests/src/: lib.rs
tests/src/common/: mod.rs  postgres.rs
tests/tests/: auth_flow.rs  health.rs  login.rs  logout.rs  oauth.rs  refresh_session.rs  registration.rs  verification.rs
