[workspace]
members = [
    "platform",
    "api",
    "business",
    "tests"
]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["macros"] }
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "uuid", "tls-rustls"] }
tracing = "0.1.44"
async-trait = "0.1.89"
utoipa = { version = "5.5.0", features = ["chrono"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
config = "0.15.23"
argon2 = { version = "0.5.3", features = ["std"] }
askama = "0.16.0"
axum-extra = { version = "0.12.6", features = ["cookie"] }
chrono = { version = "0.4.44", features = ["serde"] }
lettre = { version = "0.11.22", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "hostname", "smtp-transport", "builder"] }
local-ip-address = "0.6.13"
pasetors = "0.7.8"
rand = "0.10.1"
redis = { version = "1.2.1", features = ["connection-manager", "tokio-comp"] }
reqwest = { version = "0.13.3", features = ["form", "json", "rustls"] }
resend-rs = { version = "0.25.1", default-features = false, features = ["rustls-tls"] }
strip-ansi-escapes = "0.2.1"
time = "0.3.47"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "time"] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }
dotenvy = "0.15.7"
owo-colors = "4.3.0"
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.11", features = ["auth"] }
base64 = "0.22.1"
textdistance = "1.1.1"
mockall = "0.14.0"
wiremock = "0.6"