[package]
name = "api"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
platform = { path = "../platform" }
business = { path = "../business" }
anyhow = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
utoipa-scalar = { workspace = true }
dotenvy = { workspace = true }
owo-colors = { workspace = true }
tokio = { workspace = true }
