[package]
name = "api"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
platform = { path = "../platform" }
business = { path = "../business" }
anyhow = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
utoipa-scalar = { workspace = true }
dotenvy = { workspace = true }
owo-colors = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true, features = ["json", "cookies"] }
uuid = { workspace = true, features = ["v4", "serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
