[package]
name = "business"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
platform = { path = "../platform" }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }
mockall = { workspace = true }
