[package]
name = "platform"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
argon2 = { workspace = true }
askama = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
lettre = { workspace = true }
local-ip-address = { workspace = true }
pasetors = { workspace = true }
rand = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
resend-rs = { workspace = true }
strip-ansi-escapes = { workspace = true }
time = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
validator = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

[package.metadata.askama]
path = "templates"
