[package]
name = "integration-tests"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
platform = { path = "../platform" }
business = { path = "../business" }
axum = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true, features = ["json", "cookies"] }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
redis = { workspace = true }
wiremock = { workspace = true }